got three graphs working now.  just need to get it published to show some people

--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -23,7 +23,7 @@
 {% block search_results %}
 <section>
     <div style="width:100vw;bottom:2vh">
-        {% if db_content['pages'] %}
+        {% if db_content %}
         <div id="table-wrapper">
             <div id="table-scroll">
                 <table>
@@ -33,7 +33,13 @@
                         <th>Related Youtube links</th>
                     </tr>
                     <tbody>
-                        {% for page in db_content['pages'] %}
+                      {% for k,v in db_content.items() %}
+                        <tr style="height:5vh">
+                            <td style="text-align:center" colspan=3>
+                                <h4>{{k}}</h4>
+                            </td>
+                        </tr>
+                        {% for page in v['pages'] %}
                         <tr style="height:10vh;">
                             <td>
                                 <form style="align-content:center;margin-left:auto;margin-right:auto" id="delete_entry" action="{{ url_for('delete_entry')}}?wiki_id={{page.id}}" method="post">
@@ -53,15 +59,20 @@
                             <td>
                                 {% if page['youtube_videos'] %}
                                 <div style="height:25vh;overflow-y:scroll">
-                                    {% for each_video in page['youtube_videos'] %}
-                                        <div id="{{each_video.id}}" style="display:flex;border:1px solid black">
-                                            {% if page.thumbnail.url %}
-                                            <a onclick="add_view_count('{{url_for("add_view_count")}}','{{each_video.id}}','Youtube');" href="{{each_video.url}}" target="_blank"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></a>
-                                            <p>{{each_video.title}}</p>
-                                            {% else %}
-                                            <a onclick="add_view_count('{{url_for("add_view_count")}}','{{each_video.id}}','Youtube');" href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
-                                            {% endif %}
-                                        </div>
+                                    {% for each_video in page['youtube_videos'] %}  
+                                    <!--<div style="display:flex">
+                                    <form style="width:20px;height:20px;align-content:center;text-align:center;vertical-align:middle" id="delete_entry" action="{{ url_for('delete_entry')}}?youtube_id={{each_video.id}}" method="post">
+                                        <input type="image" src="static/assets/delete.png" width=20 height=20 id="delete_entry" />
+                                    </form>-->
+                                    <div id="{{each_video.id}}" style="display:flex;border:1px solid black">
+                                        {% if page.thumbnail.url %}
+                                        <a onclick="add_view_count('{{url_for("add_view_count")}}','{{each_video.id}}','Youtube');" href="{{each_video.url}}" target="_blank"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></a>
+                                        <p>{{each_video.title}}</p>
+                                        {% else %}
+                                        <a onclick="add_view_count('{{url_for("add_view_count")}}','{{each_video.id}}','Youtube');" href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
+                                        {% endif %}
+                                    </div>
+                                    <!--</div>-->
                                     {% endfor %}
                                 </div>
                                 {% else %}
@@ -72,6 +83,7 @@
                             </td>
                         </tr>
                         {% endfor %}
+                      {% endfor %}
                     </tbody>
                 </table>
             </div>
@@ -80,7 +92,7 @@
         <h2 style="text-align:center">
             Database is currently empty
         </h2>
-        <p style="text-align:center">Enter a search term to get back the desired number of result Wikipedia pages. <br /> Select which pages you want to save to the database and We will search and save any youtube entries found(up to 50) based on the title of the Wikipedia page.</p>
+        <p style="text-align:center">Enter a search term to get back the desired number of result Wikipedia pages. <br /> Select which pages you want to save to the database and We will search and save any youtube entries found(currently set to 50) based on the title of the Wikipedia page.</p>
         {% endif %}
     </div>
     
