--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,16 @@
                                 <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Data Visualization</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Something Else</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">Something Else</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">another thing</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">any ideas</a></h3>
+                            </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">are </a></h3>
+                            </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">appreciated</a></h3>
                             </div>
                         </div>
                     </div>
