--- a/templates/index.html
+++ b/templates/index.html
@@ -47,13 +47,13 @@
                                 <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Wiki/Youtube Library</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Data Visualization</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('inventory_graph')}}">Wiki Inventory Graph</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">Something Else</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('view_type_counts')}}">View Type Counts</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">any ideas</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('views_by_topic')}}">Views by Topic</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('aboutme')}}">are </a></h3>
@@ -70,8 +70,9 @@
             </div>
         </div>
     </section>
-
-
+    {% endblock content %}
+    {% block search_results %}{% endblock search_results %}
+    <div style="width: 100vw; height: 2vh; position: fixed; bottom: 0px; background-color: #37324b"></div>
     <!-- Some Javascript -->
     <script src="static/js/jquery-2.1.1.js"></script>
     <script src="static/js/swiper.jquery.min.js"></script>
@@ -117,8 +118,5 @@
             $(this).toggleClass('open'),
                 $('.main-nav').toggleClass('show-it');
         })</script>
-    {% endblock content %}
-    {% block search_results %}{% endblock search_results %}
-
 </body>
 </html>
