--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -2,27 +2,25 @@
 
 {% block content %}
 <section>
-    <div style="margin-top:2vh;margin-bottom:2vh;justify-content:center;align-items:center;display:flex">
-        <form id="search" action="{{ url_for('wiki_search_results') }}" method="post">
-            <label for="search">Search Wikipedia:</label>
-            <input id="search" type="text" name="search_button">
-            <input type="submit" />
-            <label for="pages"># of pages</label>
-            <select id="pages" name="pages">
-                {% for myrange in range(5,301,5) %}
-                <option value="{{myrange}}">{{myrange}}</option>
-                {% endfor %}
-            </select>
-        </form>
-        <form style="margin-left:25px" id="delete_db" action="{{ url_for('delete_db')}}" method="post">
-            <input type="submit" id="delete" value="Delete Database/Start Over?"/>
-        </form>
-    </div>
+     <form id="search" style="border:1px solid black;align-items:center;text-align:center" action="{{ url_for('wiki_search_results') }}" method="post">
+         <label for="search">Search Wikipedia:</label>
+         <input id="search" type="text" name="search_button">
+         <input type="submit" />
+         <label for="pages"># of pages</label>
+         <select id="pages" name="pages">
+             {% for myrange in range(5,301,5) %}
+             <option value="{{myrange}}">{{myrange}}</option>
+             {% endfor %}
+         </select>
+     </form>
+     <!--<form style="margin-left:25px" id="delete_db" action="{{ url_for('delete_db')}}" method="post">
+         <input type="submit" id="delete" value="Delete Database/Start Over?"/>
+     </form>-->
 </section>
 {% endblock content %}
 {% block search_results %}
 <section>
-    <div style="width:100vw;bottom:2vh">
+    <div style="width:100vw">
         {% if db_content %}
         <div id="table-wrapper">
             <div id="table-scroll">
