--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                                 <h3 class="text-left"><a href="{{url_for('views_by_topic')}}">Views by Topic</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">are </a></h3>
+                                <h3 class="text-left"><a href="{{url_for('views_wordcloud')}}">Wordcloud Views by Topic</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('aboutme')}}">appreciated</a></h3>
