single and double quotes are killing me.  delete entry and add counts are now working with new layout

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -96,7 +96,7 @@ th, td {
 }
 
 .clickable-cell:hover {
-  background-color: darkslategrey !important;
+    background-color: #37324b !important;
 }
 /* CSS animation */
 @-webkit-keyframes fadeIn {
