--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,12 @@
                 <div class="col-md-6 col-md-offset-6 col-xs-2">
                     <ul class="main-nav">
                         <li><a href="{{url_for('index')}}">Home</a></li>
-                        <li><a href="{{url_for('aboutme')}}">About</a></li>
+                        <li><a href="{{url_for('aboutme')}}">About Me</a></li>
                         <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
                         <li><a href="http://www.linkedin.com/in/doug-mcintosh">Contact</a></li>
                     </ul>
                     <div>
-                        <h2 class="col-md-6 col-md-pull-4 col-xs-8">Doug McIntosh  Seattle, WA</h2>
+                        <h2 class="col-md-8 col-md-pull-4 col-xs-8">Doug McIntosh  Seattle, WA</h2>
                     </div>
                 </div>
             </div>
@@ -47,19 +47,16 @@
                                 <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Wiki/Youtube Library</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('inventory_graph')}}">Wiki Inventory Graph</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Data Visualization</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('view_type_counts')}}">View Type Counts</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('aboutthis')}}">any</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('views_by_topic')}}">Views by Topic</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('aboutthis')}}">other</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('views_wordcloud')}}">Wordcloud Views by Topic</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('aboutme')}}">appreciated</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('aboutthis')}}">ideas are appreciated</a></h3>
                             </div>
                         </div>
                     </div>
