--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -2,15 +2,15 @@
 
 {% block title %}Doug McIntosh{% endblock %}
 {% block content %}
-<div style="text-align:center;height:65vh;overflow-y:scroll">
+<div style="text-align:center">
   <h4>Wikipedia/Youtube Library</h4>
   <h4>A Flask Python Web App designed using Visual Studio and published on PythonAnywhere.com</h4>
-  <h5>Feel free to add and delete entries if you want. Please do me a favor and click on at least one or two of the links to add to the view counts.</h5>
+  <h5>Feel free to add and delete entries if you want. Any links that are clicked will be saved to the database for viewing in the Data Vizualization graphs.</h5>
  <div style="text-align: left;margin-left:5vw;margin-top:2vh;margin-bottom:2vh;margin-right:5vw">
-  <p >&nbsp&nbsp&nbsp<b>How to use: </b>Enter a search term, choose which Wikipedia pages you would like to save. The title of the Wikipedia page will be used as a search term to retrieve 50 links from Youtube.</p>
-  <!--<a  href="https://github.com/JackManu/portfolio" target="_blank">My GitHub Repository for this project</a>-->
+  <p class="tab" style="padding-left: 5vw">&nbsp&nbsp&nbsp<b>How to use: </b>Enter a search term, choose which Wikipedia pages you would like to save. The title of the Wikipedia page will be used as a search term to retrieve 50 links from Youtube.</p>
+  <a  href="https://github.com/JackManu/portfolio" target="_blank">My GitHub Repository for this project</a>
 
-  <div style="height: 50vh; overflow-y: scroll;margin-bottom:10vh">
+  <div style="height: 40vh; overflow-y: scroll;margin-bottom:10vh">
     <ul style="list-style-type:disc !important;padding-left:5vw !important" class="tab">
         <li><b>RESTful APIs</b>
           <p>I set up API keys in the Wikipedia and Google API sites to enable connectivity.</p>
@@ -25,11 +25,12 @@
                 </li>
                 <li>
                     &nbsp&nbsp&nbsp&nbsp<b>Youtube Table</b>
-                    <p>Same information as the Wikipedia table with the addition of a column 'wiki_id' to correlate to the Wikipedia entry</p>
+                    <p>Information pertaining to a Youtube video.  The column 'wiki_id' ties it to with the related entry in the Wikipedia table</p>
                 </li>
                 <li>
                     &nbsp&nbsp&nbsp&nbsp<b>view_counts Table</b>
                     <p>Entries are inserted to this when the user clicks to view a Wikipedia or Youtube link. This seemed to be the easiest bit of data I could do graphing with</p>
+                    <p>This table is only maintaining 7 days worth of data. The Python class for the 'Data Vizualization' graphs will perform the delete every time it is instantiated.</p>
                 </li>
             </ul>
         </li>
