--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -6,8 +6,9 @@
 <section>
     {% if search_content %}
     <h5 style="text-align:center">Wikipedia search: {{search_content.search_text}}</h5>
-    <form id="insert" action="{{ url_for('wiki_insert') }}" method="post">
-        <div id="table-wrapper">
+    <form  id="insert" action="{{ url_for('wiki_insert') }}" method="post">
+      <div id="outer_div" style="width:100vw;text-align:center;align-items:center;justify-content:center">
+        <div id="table-wrapper" style="margin-left:20vw">
             <div id="table-scroll">
                 <table>
                     <tbody>
@@ -31,10 +32,11 @@
                 </table>
             </div>
         </div>
+      </div>
         
-        <div style="margin-bottom:10px;margin-top:10px;display:flex;justify-content:center">
-            <input type="submit" value="Save to Database"/>
-        </div>
+      <div style="margin-bottom:1vh;margin-top:1vh;display:flex;align-items:center;justify-content:center;">
+          <input type="submit" value="Save to Database" />
+      </div>
     </form>
     {% endif %}
 </section>
