some text changes and sqlite on the publishing site doesn't like 'returning *' in the delete.  I don't feel like troubleshooting that right now, and it still gives back the information so it's not critical.  wikipedia apis also freak out when the search has more than 100 pages, so there's that.

--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -10,13 +10,13 @@
 </div>
 <div style="text-align: left;margin-left:5vw;margin-top:2vh;margin-bottom:2vh;margin-right:5vw">
 
-  <p class="tab" style="padding-left: 5vw"><b>How to use: </b>Enter a search term, choose which Wikipedia pages you would like to save. The title of the Wikipedia page will be used as a search term to also save 50 links Youtube links to the database.</p>
+  <p class="tab" style="padding-left: 5vw"><b>How to use: </b>Enter a search term, choose which Wikipedia pages you would like to save. The title of the Wikipedia page(s) will be used as a search term to also save 50 links Youtube links to the database.</p>
 
   <div style="height: 40vh; overflow-y: scroll;margin-bottom:10vh">
     <ul style="list-style-type:disc !important;padding-left:5vw !important" class="tab">
         <li><b>RESTful APIs</b>
           <p>I set up API keys in the Wikipedia and Google API sites to enable connectivity.</p>
-          <p>Wikipedia APIs requires an additional step to get an authentication token based on the API key (Curl command run through Python subprocess/check_output)</p>
+          <p>Wikipedia APIs require an additional step to get an authentication token based on the API key (Curl command run through Python subprocess/check_output).  These tokens expire after 3 hours, I think, but I retrieve them every time.</p>
           <p>The Python requests module is used to retrieve the json data from the sources</p>
         </li>
         <li><b>SQLite Database</b>(3, count them, 3 WHOLE tables. lol.  I've definitely dealt with more complex databases and SQL over the years.)
