--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                         <li><a href="{{url_for('index')}}">Home</a></li>
                         <li><a href="{{url_for('aboutme')}}">About Me</a></li>
                         <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
-                        <li><a href="http://www.linkedin.com/in/doug-mcintosh">Contact</a></li>
+                        <li><a href="http://www.linkedin.com/in/doug-mcintosh" target="_blank">Contact</a></li>
                     </ul>
                     <div>
                         <h2 class="col-md-12 col-md-pull-6 col-xs-8">Doug McIntosh  Seattle, WA</h2>
