--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -11,8 +11,8 @@
     </figure>
     <div id="my_text" style="height: 50vh; overflow-y: scroll; margin-left: 5vw; display: inline-block">
         <p>&nbsp&nbsp&nbsp&nbspI've lived and breathed drumming and music for most of my life.  I will talk your ear off about my favorite music and musicians if the topic arises.</p>
-        <p>&nbsp&nbsp&nbsp&nbspI grew up in St. Louis, MO and have been living in Seattle, WA since 2005.  I love Seattle.  I don't mind what the people around here call 'rain', and we don't melt or freeze here.</p>
-      <p>&nbsp&nbsp&nbspIn the meantime I've also managed to work in the IT industry for ~20+ years dealing mostly with server-side development/support in the Telecom domain.</p>
+        <p>&nbsp&nbsp&nbsp&nbspI grew up in St. Louis, MO and have been living in Seattle, WA since 2005.  I love Seattle.  I don't mind what the people around here call 'rain'.  We don't melt or freeze here.</p>
+      <p>&nbsp&nbsp&nbspIn the meantime I've also managed to work in the IT industry for 20+ years dealing mostly with server-side development/support in the Telecom domain.</p>
       <p>&nbsp&nbsp&nbsp&nbspIT development/production support work has been incredibly painful and frustrating for me at times, but I've been able to persevere and use the lessons learned to more efficiently and effectively handle new problems when they arise.</p>
       <p> I cannot stand mayonnaise and I am an extremely handsome genius. just an fyi for your notes.</p>
     </div>
