some changes didn't go through

--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -10,7 +10,7 @@
 </div>
 <div style="text-align: left;margin-left:5vw;margin-top:2vh;margin-bottom:2vh;margin-right:5vw">
 
-  <p class="tab" style="padding-left: 5vw"><b>How to use: </b>Enter a search term, choose which Wikipedia pages you would like to save. The title of the Wikipedia page(s) will be used as a search term to also save 50 links Youtube links to the database.</p>
+  <p class="tab" style="padding-left: 5vw"><b>How to use: </b>Enter a search term, choose which Wikipedia pages you would like to save. The title of the Wikipedia page(s) will be used as a search term to also save 50 Youtube links to the database.</p>
 
   <div style="height: 40vh; overflow-y: scroll;margin-bottom:10vh">
     <ul style="list-style-type:disc !important;padding-left:5vw !important" class="tab">
