--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -9,7 +9,7 @@
     <div style="width:20vw;margin-right:1vw">
         {% for k in content.types %}
             <form id="{{k}}" action="{{url_for('data_analysis')}}?graph={{k}}" width="100%" method="post">
-               <input value="{{k}}" type="submit" class="full-width-button" style="margin-top:1vw;text-align:left">
+               <input value="{{k}}" type="submit" class="full-width-button" style="text-align:left">
             </form>
         {% endfor %} 
     </div>
